# blaze

./: .gitignore  Cargo.toml  Makefile  README.md
contrib/launchd/: com.example.blaze-daemon.plist
contrib/systemd/: blaze.service
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: history.rs  index.rs  mod.rs  query.rs
crates/cli/src/printer/: mod.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  main.rs  query.rs  rpc.rs  state.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  pipeline.rs  query_runner.rs  trigram.rs  trigram_tests.rs
crates/engine/src/dsl/: ast.rs  lexer.rs  lexer_tests.rs  mod.rs  parser.rs  parser_tests.rs  predicates.rs  predicates_tests.rs
crates/engine/src/eval/: helpers.rs  helpers_tests.rs  mod.rs  planner.rs  predicates.rs  text.rs
crates/engine/src/eval/rank/: mod.rs  path_order.rs  scoring.rs
crates/engine/src/index/: builder.rs  compat.rs  flags.rs  helpers.rs  mod.rs  mod_tests.rs  persist.rs  reader.rs
crates/fs/: Cargo.toml
crates/fs/src/: config.rs  excludes.rs  excludes_tests.rs  lib.rs  record.rs  walker.rs  walker_tests.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  history.rs  history_tests.rs  lib.rs  logging.rs  logging_tests.rs
scripts/: benchmark.sh
