[workspace.package]
name = "blaze"
version = "0.2.0"
edition = "2024"

[workspace]
resolver = "3"
members = [ 
	"crates/cli",
	"crates/daemon",
	"crates/engine",
	"crates/fs",
	"crates/indexer",
	"crates/protocol",
	"crates/runtime",
]

[workspace.dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1",  features = ["serde"]  }
bitflags = "2.10.0"
blaze-cli = { path = "crates/cli" }
blaze-engine = { path = "crates/engine" }
blaze-fs = { path = "crates/fs" }
blaze-protocol = { path = "crates/protocol" }
blaze-indexer = { path = "crates/indexer" }
blaze-runtime = { path = "crates/runtime" }
bytemuck = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.4"
crossbeam = "0.8"
dirs = "6.0.0"
hashbrown = "0.15"
ignore = "0.4.25"
log = "0.4.28"
memmap2 = "0.9"
serde_json = "1.0" 
serde = { version = "1.0", features = ["derive"] }
serial_test = "3.2.0"
smallvec = "1.13"
tempfile = "3.23.0"

[workspace.dev-dependencies]
criterion = "0.7"
