[package]
name = "blaze-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
blaze-engine = { workspace = true }
blaze-fs = { workspace = true }
blaze-indexer = { workspace = true }
blaze-protocol = { workspace = true }
blaze-runtime = { workspace = true }
clap = { version = "4.5.53", features = ["derive"]}
crossbeam = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
signal-hook = "0.3"
